--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 			<li>一个城市,一个梦想 欢迎来到 商城</li>
 			<li><a href="login.html"> [登录] </a></li>
 			<li class="reg"><a href="reg.html"> [免费注册] </a></li>
+            <li><a href="user.html">个人中心</a></li>
 		</ul>
 	</div>
 </div>
@@ -36,6 +37,7 @@
 	</div>
 </div>
 <div class="banner">
+<div class="container">
   <div class="menu">
     <ul>
       <li>
@@ -1145,6 +1147,7 @@
     </ul>
     <div class="menu_bg"></div>
   </div>
+</div>
   <div class="slider">
     <div class="bd">
       <ul>
