--- a/login.html
+++ b/login.html
@@ -20,11 +20,12 @@
 	</div>
 </div>
 <div class="nav">
-	<a href="index.html"><div class="nav-logo"></div></a>
+	<a href="#"><div class="nav-logo"></div></a>
 	<ul class="flex">
 		<li><a class="active" href="#">榆次商城</a></li>
 		<li><a href="#">秒杀专场</a></li>
 		<li><a href="#">精品特区</a></li>
+		<li><a href="trolley.html">购物车</a></li>
 	</ul>
 	<div class="nav-search">
 		<input type="text" placeholder="请输入你想买的商品名称" />
