--- a/checkAdd.html
+++ b/checkAdd.html
@@ -25,6 +25,7 @@
 		<li><a class="active" href="#">榆次商城</a></li>
 		<li><a href="#">秒杀专场</a></li>
 		<li><a href="#">精品特区</a></li>
+		<li><a href="trolley.html">购物车</a></li>
 	</ul>
 	<div class="nav-search">
 		<input type="text" placeholder="请输入你想买的商品名称" />
@@ -123,7 +124,7 @@
 	<div class="flex">
 		<div class="vipRemark">
 			<div class="title">会员留言</div>
-			<div><textarea></textarea></div>
+			<div><textarea class="vipTips"></textarea></div>
 		</div>
 		<ul class="sumUp">
 			<li class="flex">
