--- a/trolley.html
+++ b/trolley.html
@@ -20,20 +20,21 @@
 	</div>
 </div>
 <div class="nav">
-	<a href="index.html"><div class="nav-logo"></div></a>
+	<a href="#"><div class="nav-logo"></div></a>
 	<ul class="flex">
 		<li><a class="active" href="#">榆次商城</a></li>
 		<li><a href="#">秒杀专场</a></li>
 		<li><a href="#">精品特区</a></li>
+		<li><a href="trolley.html">购物车</a></li>
 	</ul>
 	<div class="nav-search">
 		<input type="text" placeholder="请输入你想买的商品名称" />
 		<input class="search-submit" type="submit" value="" />
 	</div>
 </div>
-<div class="crumb container">
+<!-- <div class="crumb container">
 	<a href="#">手机数码</a>><a href="#">手机配件</a>><a href="#">耳机</a>><a href="#">耳挂式</a>><a href="">铁三角系列</a>
-</div>
+</div> -->
 <div class="container">
 	<table class="trolley">
 		<thead>
